@@ -7,7 +7,7 @@
         <title>{{ $title ?? 'Page Title' }}</title>
 
         <link rel="stylesheet" href="{{ url('build/assets/app-CKF9trwW.css') }}">
-        <script src="{{ url('build/assets/app-58r_jytx.js') }}"></script>
+        <script src="{{ url('build/assets/app-CjQv_3k2.js') }}"></script>
     </head>
     <body>
         {{ $slot }}
